@@ -74,6 +74,39 @@ context "Given a view that includes a partial using :collection and :spacer_temp
 
 end
 
+context "Given a view that includes a partial using an array as partial_path", :context_type => :view do
+  setup do
+    module ActionView::Partials
+      def render_partial_with_array_support(partial_path, local_assigns = nil, deprecated_local_assigns = nil)
+        if partial_path.is_a?(Array)
+          "Array Partial"
+        else
+          render_partial_without_array_support(partial_path, local_assigns, deprecated_local_assigns)
+        end
+      end
+
+      alias :render_partial_without_array_support :render_partial
+      alias :render_partial :render_partial_with_array_support
+    end
+
+    @array = ['Alice', 'Bob']
+    assigns[:array] = @array
+  end
+
+  teardown do
+    module ActionView::Partials
+      alias :render_partial_with_array_support :render_partial
+      alias :render_partial :render_partial_without_array_support
+      undef render_partial_with_array_support
+    end
+  end
+
+  specify "the array should be passed through to render_partial without modification" do
+    render "view_spec/partial_with_array" 
+    response.body.should_match /^Array Partial$/
+  end
+end
+
 context "Different types of renders (not :template)", :context_type => :view do
   specify "partial with local" do
     render :partial => "view_spec/partial_with_local_variable", :locals => {:x => "Ender"}
